--- a/css/main.css
+++ b/css/main.css
@@ -159,8 +159,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
-    align-items: center;
-    min-height: 400px;
+    align-items: start;
 }
 
 .recipe-info {
@@ -168,11 +167,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     padding: 1rem;
     box-sizing: border-box;
     width: 100%;
-    height: 100%;
 }
 
 .recipe-info img {
@@ -190,10 +188,10 @@
 }
 
 .recipe-image {
-    width: 100%;
-    max-width: 100%;
-    height: 300px;
-    object-fit: cover;
+    width: 75%;
+    max-width: 75%;
+    height: auto;
+    object-fit: contain;
     border-radius: 15px;
     margin: 0 auto;
     display: block;
